blocklib: use category field to place in grc category
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/analog/noise_source/noise_source.yml
+++ b/blocklib/analog/noise_source/noise_source.yml
@@ -2,6 +2,7 @@ module: analog
 block: noise_source
 label: Noise Source
 blocktype: sync_block
+category: '[Core]/Waveform Generators'
 includes:
   - gnuradio/analog/enums.h
 
