--- a/blocklib/blocks/null_source/null_source.yml
+++ b/blocklib/blocks/null_source/null_source.yml
@@ -2,6 +2,7 @@ module: blocks
 block: null_source
 label: Null Source
 blocktype: sync_block
+category: '[Core]/Misc'
 
 parameters:
 -   id: nports
