--- a/blocklib/filter/pfb_channelizer/pfb_channelizer.yml
+++ b/blocklib/filter/pfb_channelizer/pfb_channelizer.yml
@@ -2,6 +2,7 @@ module: filter
 block: pfb_channelizer
 label: PFB Channelizer
 blocktype: block
+category: '[Core]/Channelizers'
 
 typekeys:
   - id: T
