--- a/blocklib/zeromq/rep_sink/rep_sink.yml
+++ b/blocklib/zeromq/rep_sink/rep_sink.yml
@@ -2,6 +2,7 @@ module: zeromq
 block: rep_sink
 label: REP Sink
 blocktype: sync_block
+category: '[Core]/ZeroMQ Interfaces'
 # inherits: gr::zeromq::base
 # includes: 
 #   - gnuradio/zeromq/base.h
