--- a/blocklib/analog/fm_deemph/fm_deemph.yml
+++ b/blocklib/analog/fm_deemph/fm_deemph.yml
@@ -2,6 +2,7 @@ module: analog
 block: fm_deemph
 label: FM Deemphasis IIR Filter
 blocktype: hier_block
+category: '[Core]/Modulators'
 
 # Example Parameters
 parameters:
