--- a/blocklib/analog/quadrature_demod/quadrature_demod.yml
+++ b/blocklib/analog/quadrature_demod/quadrature_demod.yml
@@ -2,6 +2,7 @@ module: analog
 block: quadrature_demod
 label: Quadrature Demod
 blocktype: block
+category: '[Core]/Modulators'
 
 doc:
   brief: "quadrature demodulator: complex in, float out"
