--- a/blocklib/analog/sig_source/sig_source.yml
+++ b/blocklib/analog/sig_source/sig_source.yml
@@ -2,6 +2,7 @@ module: analog
 block: sig_source
 label: Signal Source
 blocktype: sync_block
+category: '[Core]/Waveform Generators'
 includes:
   - gnuradio/analog/enums.h
   
