--- a/blocklib/blocks/msg_forward/msg_forward.yml
+++ b/blocklib/blocks/msg_forward/msg_forward.yml
@@ -2,6 +2,7 @@ module: blocks
 block: msg_forward
 label: Message Forward
 blocktype: sync_block
+category: '[Core]/Debug Tools'
 includes: 
   - pmtf/wrap.hpp
 
