--- a/blocklib/blocks/nop_source/nop_source.yml
+++ b/blocklib/blocks/nop_source/nop_source.yml
@@ -2,6 +2,7 @@ module: blocks
 block: nop_source
 label: Nop Source
 blocktype: sync_block
+category: '[Core]/Debug Tools'
 
 parameters:
 -   id: nports
