--- a/blocklib/blocks/tags_strobe/tags_strobe.yml
+++ b/blocklib/blocks/tags_strobe/tags_strobe.yml
@@ -2,6 +2,7 @@ module: blocks
 block: tags_strobe
 label: Tag Strobe
 blocktype: sync_block
+category: '[Core]/Debug Tools'
 
 parameters:
 -   id: value
