--- a/blocklib/blocks/vector_sink/vector_sink.yml
+++ b/blocklib/blocks/vector_sink/vector_sink.yml
@@ -2,6 +2,7 @@ module: blocks
 block: vector_sink
 label: Vector Sink
 blocktype: sync_block
+category: '[Core]/Debug Tools'
 
 typekeys:
   - id: T
