--- a/blocklib/fileio/file_source/file_source.yml
+++ b/blocklib/fileio/file_source/file_source.yml
@@ -2,6 +2,7 @@ module: fileio
 block: file_source
 label: File Source
 blocktype: sync_block
+category: '[Core]/File Operators'
 
 parameters:
 -   id: filename
