--- a/blocklib/streamops/keep_m_in_n/keep_m_in_n.yml
+++ b/blocklib/streamops/keep_m_in_n/keep_m_in_n.yml
@@ -2,6 +2,7 @@ module: streamops
 block: keep_m_in_n
 label: Keep M in N
 blocktype: block
+category: '[Core]/Stream Operators'
 
 # Example Parameters
 parameters:
