--- a/blocklib/streamops/nop_head/nop_head.yml
+++ b/blocklib/streamops/nop_head/nop_head.yml
@@ -2,6 +2,7 @@ module: streamops
 block: nop_head
 label: Nop Head
 blocktype: sync_block
+category: '[Core]/Debug Tools'
 
 parameters:
 -   id: nitems
