--- a/blocklib/streamops/probe_signal/probe_signal.yml
+++ b/blocklib/streamops/probe_signal/probe_signal.yml
@@ -2,6 +2,7 @@ module: streamops
 block: probe_signal
 label: Probe Signal
 blocktype: sync_block
+category: '[Core]/Measurement Tools'
 
 typekeys:
   - id: T
