--- a/blocklib/streamops/throttle/throttle.yml
+++ b/blocklib/streamops/throttle/throttle.yml
@@ -2,6 +2,7 @@ module: streamops
 block: throttle
 label: Throttle
 blocktype: sync_block
+category: '[Core]/Misc'
 
 parameters:
 -   id: samples_per_sec
