--- a/blocklib/zeromq/pub_sink/pub_sink.yml
+++ b/blocklib/zeromq/pub_sink/pub_sink.yml
@@ -2,6 +2,7 @@ module: zeromq
 block: pub_sink
 label: PUB Sink
 blocktype: sync_block
+category: '[Core]/ZeroMQ Interfaces'
 
 # Example Parameters
 parameters:
