--- a/blocklib/zeromq/pull_source/pull_source.yml
+++ b/blocklib/zeromq/pull_source/pull_source.yml
@@ -2,6 +2,7 @@ module: zeromq
 block: pull_source
 label: PULL Source
 blocktype: sync_block
+category: '[Core]/ZeroMQ Interfaces'
 # inherits: base
 
 parameters:
