--- a/blocklib/zeromq/push_sink/push_sink.yml
+++ b/blocklib/zeromq/push_sink/push_sink.yml
@@ -2,6 +2,7 @@ module: zeromq
 block: push_sink
 label: PUSH Sink
 blocktype: sync_block
+category: '[Core]/ZeroMQ Interfaces'
 # inherits: gr::zeromq::base
 # includes: 
 #   - gnuradio/zeromq/base.h
