--- a/blocklib/zeromq/sub_source/sub_source.yml
+++ b/blocklib/zeromq/sub_source/sub_source.yml
@@ -2,6 +2,7 @@ module: zeromq
 block: sub_source
 label: SUB Source
 blocktype: sync_block
+category: '[Core]/ZeroMQ Interfaces'
 
 # Example Parameters
 parameters:
