gr/prefs: expose to pybind11
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/python/gr/bindings/meson.build
+++ b/gr/python/gr/bindings/meson.build
@@ -21,6 +21,7 @@ runtime_pybind_sources = files([
     'runtime_proxy_pybind.cc',
     'graph_utils_pybind.cc',
     'rpc_client_interface_pybind.cc',
+    'prefs_pybind.cc'
  ] )
 
 cpp_args = []
