soapy: initial port incl. rtlsdr, hackrf
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/meson.build
+++ b/blocklib/meson.build
@@ -32,3 +32,6 @@ endif
 if get_option('enable_gr_audio')
 subdir('audio')
 endif
+if get_option('enable_gr_soapy') and soapysdr_dep.found()
+subdir('soapy')
+endif
