blocklib: change yml to standard types
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/blocklib/analog/agc/agc.yml
+++ b/blocklib/analog/agc/agc.yml
@@ -15,15 +15,15 @@ typekeys:
 parameters:
 -   id: rate
     label: Rate
-    dtype: float
+    dtype: rf32
     default: 1e-4
 -   id: reference
     label: Reference
-    dtype: float
+    dtype: rf32
     default: 1.0
 -   id: gain
     label: Gain
-    dtype: float
+    dtype: rf32
     default: 1.0
 
 ports:
