--- a/blocklib/blocks/null_sink/null_sink.yml
+++ b/blocklib/blocks/null_sink/null_sink.yml
@@ -7,12 +7,12 @@ category: '[Core]/Misc'
 parameters:
 -   id: nports
     label: Num. Ports
-    dtype: size_t
+    dtype: size
     default: 1
     settable: false
 -   id: itemsize
     label: Item Size
-    dtype: size_t
+    dtype: size
     settable: false
     default: 0
     grc:
