--- a/blocklib/filter/moving_average/moving_average.yml
+++ b/blocklib/filter/moving_average/moving_average.yml
@@ -14,7 +14,7 @@ typekeys:
 parameters:
 -   id: length
     label: Length
-    dtype: size_t
+    dtype: size
     settable: true
 -   id: scale
     label: Scale
@@ -22,12 +22,12 @@ parameters:
     settable: true
 -   id: max_iter
     label: Max Iter
-    dtype: size_t
+    dtype: size
     settable: false
     default: 4096
 -   id: vlen
     label: Vector Length
-    dtype: size_t
+    dtype: size
     settable: false
     default: 1
 
