--- a/blocklib/streamops/copy/copy.yml
+++ b/blocklib/streamops/copy/copy.yml
@@ -13,7 +13,7 @@ doc:
 parameters:
     - id: itemsize
       label: Item Size
-      dtype: size_t
+      dtype: size
       settable: false
       default: 0
       grc:
