--- a/blocklib/streamops/delay/delay.yml
+++ b/blocklib/streamops/delay/delay.yml
@@ -7,11 +7,11 @@ category: '[Core]/Misc'
 parameters:
 -   id: dly
     label: Delay
-    dtype: size_t
+    dtype: size
     settable: true
 -   id: itemsize
     label: Item Size
-    dtype: size_t
+    dtype: size
     settable: false
     default: 0
     grc:
