--- a/blocklib/zeromq/push_msg_sink/push_msg_sink.yml
+++ b/blocklib/zeromq/push_msg_sink/push_msg_sink.yml
@@ -8,7 +8,7 @@ category: '[Core]/ZeroMQ Interfaces'
 parameters:
     - id: address
       label: IP Address
-      dtype: std::string
+      dtype: string
       settable: false
     - id: timeout
       label: Timeout
