--- a/blocklib/streamops/interleaved_short_to_complex/interleaved_short_to_complex.yml
+++ b/blocklib/streamops/interleaved_short_to_complex/interleaved_short_to_complex.yml
@@ -12,7 +12,7 @@ parameters:
     default: 'false'
 -   id: scale_factor
     label: Scale Factor
-    dtype: float
+    dtype: rf32
     settable: true
     default: 1.0
 
