--- a/blocklib/streamops/nop/nop.yml
+++ b/blocklib/streamops/nop/nop.yml
@@ -7,7 +7,7 @@ category: '[Core]/Debug Tools'
 parameters:
 -   id: itemsize
     label: Item Size
-    dtype: size_t
+    dtype: size
     settable: false
     default: 0
     grc:
