--- a/blocklib/streamops/stream_to_streams/stream_to_streams.yml
+++ b/blocklib/streamops/stream_to_streams/stream_to_streams.yml
@@ -7,11 +7,11 @@ category: '[Core]/Stream Operators'
 parameters:
 -   id: nstreams
     label: Number of Streams
-    dtype: size_t
+    dtype: size
     settable: false
 -   id: itemsize
     label: Item Size
-    dtype: size_t
+    dtype: size
     settable: false
     default: 0
     grc:
