--- a/blocklib/zeromq/pub_sink/pub_sink.yml
+++ b/blocklib/zeromq/pub_sink/pub_sink.yml
@@ -8,7 +8,7 @@ category: '[Core]/ZeroMQ Interfaces'
 parameters:
     - id: address
       label: IP Address
-      dtype: std::string
+      dtype: string
       settable: false
     - id: timeout
       label: Timeout
@@ -27,12 +27,12 @@ parameters:
       default: -1
     - id: key
       label: Key
-      dtype: std::string
+      dtype: string
       settable: false
       default: "\"\""
     - id: itemsize
       label: Item Size
-      dtype: size_t
+      dtype: size
       settable: false
       default: 0
 
