--- a/blocklib/zeromq/push_sink/push_sink.yml
+++ b/blocklib/zeromq/push_sink/push_sink.yml
@@ -10,7 +10,7 @@ category: '[Core]/ZeroMQ Interfaces'
 parameters:
     - id: address
       label: IP Address
-      dtype: std::string
+      dtype: string
       settable: false
     - id: timeout
       label: Timeout
@@ -29,7 +29,7 @@ parameters:
       default: -1
     - id: itemsize
       label: Item Size
-      dtype: size_t
+      dtype: size
       settable: false
       default: 0
 callbacks:
