--- a/blocklib/zeromq/req_source/req_source.yml
+++ b/blocklib/zeromq/req_source/req_source.yml
@@ -8,7 +8,7 @@ category: '[Core]/ZeroMQ Interfaces'
 parameters:
     - id: address
       label: IP Address
-      dtype: std::string
+      dtype: string
       settable: false
     - id: timeout
       label: Timeout
@@ -27,7 +27,7 @@ parameters:
       default: -1
     - id: itemsize
       label: Item Size
-      dtype: size_t
+      dtype: size
       settable: false
       default: 0
 ports:
