--- a/blocklib/blocks/vector_source/vector_source.yml
+++ b/blocklib/blocks/vector_source/vector_source.yml
@@ -28,7 +28,7 @@ parameters:
     default: 'false'
 -   id: vlen
     label: Vec. Length
-    dtype: size_t
+    dtype: size
     settable: false
     default: 1
 -   id: tags
