--- a/blocklib/math/complex_to_mag/complex_to_mag.yml
+++ b/blocklib/math/complex_to_mag/complex_to_mag.yml
@@ -6,7 +6,7 @@ blocktype: sync_block
 parameters:
 -   id: vlen
     label: Vector Length
-    dtype: size_t
+    dtype: size
     settable: false
     default: 1
 
