--- a/blocklib/streamops/nop/nop.yml
+++ b/blocklib/streamops/nop/nop.yml
@@ -6,7 +6,7 @@ blocktype: sync_block
 parameters:
 -   id: itemsize
     label: Item Size
-    dtype: size_t
+    dtype: size
     settable: false
     default: 0
     grc:
