--- a/blocklib/zeromq/pull_msg_source/pull_msg_source.yml
+++ b/blocklib/zeromq/pull_msg_source/pull_msg_source.yml
@@ -6,7 +6,7 @@ blocktype: sync_block
 parameters:
     - id: address
       label: IP Address
-      dtype: std::string
+      dtype: string
       settable: false
     - id: timeout
       label: Timeout
