--- a/blocklib/zeromq/sub_source/sub_source.yml
+++ b/blocklib/zeromq/sub_source/sub_source.yml
@@ -7,7 +7,7 @@ blocktype: sync_block
 parameters:
     - id: address
       label: IP Address
-      dtype: std::string
+      dtype: string
       settable: false
     - id: timeout
       label: Timeout
@@ -26,12 +26,12 @@ parameters:
       default: -1
     - id: key
       label: Key
-      dtype: std::string
+      dtype: string
       settable: false
       default: "\"\""
     - id: itemsize
       label: Item Size
-      dtype: size_t
+      dtype: size
       settable: false
       default: 0
       
