--- a/blocklib/analog/quadrature_demod/quadrature_demod.yml
+++ b/blocklib/analog/quadrature_demod/quadrature_demod.yml
@@ -31,7 +31,7 @@ doc:
 parameters:
 -   id: gain
     label: Gain
-    dtype: float
+    dtype: rf32
     settable: true
     grc:
         hide: part
