--- a/blocklib/fileio/file_sink/file_sink.yml
+++ b/blocklib/fileio/file_sink/file_sink.yml
@@ -6,11 +6,11 @@ blocktype: sync_block
 parameters:
 -   id: filename
     label: Filename
-    dtype: std::string
+    dtype: string
     settable: false
 -   id: itemsize
     label: Item Size
-    dtype: size_t
+    dtype: size
     settable: false
     default: 0
 -   id: append
