--- a/blocklib/filter/fir_filter/fir_filter.yml
+++ b/blocklib/filter/fir_filter/fir_filter.yml
@@ -41,7 +41,7 @@ type_inst:
 parameters:
 -   id: decimation
     label: Decimation
-    dtype: size_t
+    dtype: size
     settable: false
 -   id: taps
     label: Taps
