--- a/blocklib/math/multiply_const/multiply_const.yml
+++ b/blocklib/math/multiply_const/multiply_const.yml
@@ -19,7 +19,7 @@ parameters:
     settable: true
 -   id: vlen
     label: Vec. Length
-    dtype: size_t
+    dtype: size
     settable: false
     default: 1
 
