--- a/blocklib/streamops/head/head.yml
+++ b/blocklib/streamops/head/head.yml
@@ -6,11 +6,11 @@ blocktype: sync_block
 parameters:
 -   id: nitems
     label: Num. Items
-    dtype: size_t
+    dtype: size
     settable: false
 -   id: itemsize
     label: Item Size
-    dtype: size_t
+    dtype: size
     settable: false
     default: 0
     grc:
