--- a/blocklib/zeromq/pull_source/pull_source.yml
+++ b/blocklib/zeromq/pull_source/pull_source.yml
@@ -7,7 +7,7 @@ blocktype: sync_block
 parameters:
     - id: address
       label: IP Address
-      dtype: std::string
+      dtype: string
       settable: false
     - id: timeout
       label: Timeout
@@ -26,7 +26,7 @@ parameters:
       default: -1
     - id: itemsize
       label: Item Size
-      dtype: size_t
+      dtype: size
       settable: false
       default: 0
 ports:
