--- a/gnuradio-runtime/lib/CMakeLists.txt
+++ b/gnuradio-runtime/lib/CMakeLists.txt
@@ -297,7 +297,7 @@ endif()
 ########################################################################
 
 if(MSVC)
-    include(${GNURADIO_SOURCE_DIR}/cmake/Modules/GrVersion.cmake)
+    include(${PROJECT_SOURCE_DIR}/cmake/Modules/GrVersion.cmake)
 
     configure_file(
         ${CMAKE_CURRENT_SOURCE_DIR}/gnuradio-runtime.rc.in
