modtool: update newmod and newblock files
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/utils/modtool/newmod/blocklib/newmod/test/meson.build
+++ b/utils/modtool/newmod/blocklib/newmod/test/meson.build
@@ -2,6 +2,5 @@
 #    QA
 ###################################################
 
-if get_option('enable_testing')
-
-endif
+# Add a statement to enable the qa test files
+# test('<Name Of Test>', py3, args : files('<qa_test_file>.py'), env: TEST_ENV)
