ci: Update clang-format-lint to 0.14
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,11 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: gnuradio/clang-format-lint-action@v0.5-4
+    - uses: DoozyX/clang-format-lint-action@v0.14
       with:
         source: '.'
-        exclude: './subprojects'
+        exclude: './subprojects ./gr/include/moodycamel'
         extensions: 'h,hpp,cpp,cc,cc.in'
+        clangFormatVersion: 14
   linux-docker:
   # All of these shall depend on the formatting check (needs: check-formatting)
     needs: [check-formatting]
