dev-4.0 Set permissions correctly
gnuradio-companion has permissions rwxr--r-- but should have rwxr-xr-x.

Fixed typo in README

Signed-off-by: Volker Schroer <3470424+dl1ksv@users.noreply.github.com>

--- a/grc/scripts/meson.build
+++ b/grc/scripts/meson.build
@@ -8,6 +8,6 @@ configure_file(
   input         : 'gnuradio-companion',
   install       : true,
   install_dir   : 'bin',
-  install_mode  : 'rwxr--r--',
+  install_mode  : 'rwxr-xr-x',
   output: 'gnuradio-companion'
 )
