meson: cleanup meson scripts
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/bench/meson.build
+++ b/bench/meson.build
@@ -50,7 +50,7 @@ executable('bm_msg_forward',
     install : true)
 
 
-if cuda_dep.found() and get_option('enable_cuda')
+if IMPLEMENT_CUDA
     subdir('cuda')
 endif
 endif
