--- a/blocklib/blocks/lib/meson.build
+++ b/blocklib/blocks/lib/meson.build
@@ -2,7 +2,7 @@ blocks_deps += [gnuradio_gr_dep, volk_dep, fmt_dep, pmtf_dep]
 
 block_cpp_args = ['-DHAVE_CPU']
 link_args = []
-# if USE_CUDA
+# if IMPLEMENT_CUDA
 #     block_cpp_args += '-DHAVE_CUDA'
 
 #     gnuradio_blocklib_blocks_cu = library('gnuradio-blocklib-blocks-cu', 
