--- a/meson.build
+++ b/meson.build
@@ -5,27 +5,28 @@ project('gnuradio', 'cpp',
   version : '4.0.0.0-preview0',
   license : 'GPLv3',
   default_options : ['cpp_std=c++20'])
+
+## Compilers
 cc = meson.get_compiler('cpp')
 rt_dep = cc.find_library('rt', required : false)
 libdl_dep = cc.find_library('dl')
-
 c_available = add_languages('c', required : true)
 cuda_available = add_languages('cuda', required : false)
-USE_CUDA = cuda_available and get_option('enable_cuda')
-IMPLEMENT_CUDA = USE_CUDA
+
+IMPLEMENT_CUDA = false # By default
 IMPLEMENT_CPU = true
 
 SCRIPTS_DIR=join_paths(meson.project_source_root(),'utils','blockbuilder','scripts')
 
+## Build Dependencies
 volk_dep = dependency('volk', version : '>=2.2')
 yaml_dep = dependency('yaml-cpp', version : '>=0.6')
 fmt_dep = dependency('fmt')
 spdlog_dep = dependency('spdlog')
-python3_dep = dependency('python3', required : get_option('enable_python'))
-python3_embed_dep = dependency('python3-embed', required : get_option('enable_python'))
-soapysdr_dep = dependency('SoapySDR', version : '>=0.7', required : false)
+threads_dep = dependency('threads')
 
 # Import python3 meson module which is used to find the Python dependencies.
+# Python3 is required for code generation
 py3_inst = import('python').find_installation('python3')
 py3 = py3_inst
 py3_version = py3_inst.language_version()
@@ -33,16 +34,31 @@ if py3_version.version_compare('< 3.6')
   error('Invalid python version!?')
 endif
 
+if (get_option('enable_testing'))
+gtest_dep = dependency('gtest', main : true, version : '>=1.10', required : get_option('enable_testing'))
+endif
+
+if (get_option('enable_python'))
+python3_dep = dependency('python3', required : get_option('enable_python'))
+python3_embed_dep = dependency('python3-embed', required : get_option('enable_python'))
+pybind11_dep = dependency('pybind11', required : get_option('enable_python'))
 incdir_numpy = run_command(py3,
   ['-c', 'import os; os.chdir(".."); import numpy; print(numpy.get_include())'],
   check : true
 ).stdout().strip()
+endif
 
-pybind11_dep = dependency('pybind11', required : get_option('enable_python'))
-threads_dep = dependency('threads')
-gtest_dep = dependency('gtest', main : true, version : '>=1.10', required : get_option('enable_testing'))
-cuda_dep = dependency('cuda', version : '>=10.1', required : USE_CUDA, modules : ['cufft'])
+if (get_option('enable_cuda'))
+cuda_dep = dependency('cuda', version : '>=10.1', required : true, modules : ['cufft'])
+if not cuda_available
+error('CUDA compiler not found, but enable_cuda option specified')
+endif
+IMPLEMENT_CUDA = true
+endif
 
+
+
+## Subprojects
 libpmtf = subproject('pmt')
 pmtf_dep = libpmtf.get_variable('pmtf_dep')
 
@@ -55,11 +71,13 @@ opt_var.add_cmake_defines({'CPPZMQ_BUILD_TESTS': false})
 libcppzmq = cmake.subproject('cppzmq', options: opt_var)
 cppzmq_dep = libcppzmq.dependency('cppzmq')
 
-if USE_CUDA
+if IMPLEMENT_CUDA
   libcusp = subproject('cusp')
   cusp_dep = libcusp.get_variable('cusp_dep')
 endif
 
+
+## Test Environment
 if (get_option('enable_testing'))
     TEST_ENV = environment()
     TEST_ENV.prepend('LD_LIBRARY_PATH', 
@@ -76,7 +94,6 @@ if (get_option('enable_testing'))
       join_paths( meson.build_root(),'blocklib','soapy','lib'),
     )
     TEST_ENV.prepend('PYTHONPATH', join_paths(meson.build_root(),'python')+':'+join_paths(meson.build_root(), 'subprojects/pmt/python') )
-
 endif
 
 prefix = get_option('prefix')
@@ -97,7 +114,7 @@ GR_PKG_CONF_DIR = join_paths(SYSCONFDIR, meson.project_name(), 'conf.d')
 GR_PREFSDIR = join_paths(SYSCONFDIR, meson.project_name(), 'conf.d')
 GRC_BLOCKS_DIR = join_paths(GR_PKG_DATA_DIR, 'grc/blocks')
 
-
+## Subdirectories with meson.build
 subdir('gr')
 subdir('kernel')
 subdir('blocklib')
