--- a/test/meson.build
+++ b/test/meson.build
@@ -33,6 +33,6 @@ test('Block Parameters', py3, args : files('qa_parameters.py'), env: TEST_ENV)
 test('Python Blocks', py3, args : files('qa_python_block.py'), env: TEST_ENV)
 test('Hier Block', py3, args : files('qa_hier_block.py'), env: TEST_ENV)
 
-if cuda_dep.found() and get_option('enable_cuda')
+if IMPLEMENT_CUDA
     subdir('cuda')
 endif
