--- a/meson.build
+++ b/meson.build
@@ -27,9 +27,8 @@ threads_dep = dependency('threads')
 
 # Import python3 meson module which is used to find the Python dependencies.
 # Python3 is required for code generation
-py3_inst = import('python').find_installation('python3')
-py3 = py3_inst
-py3_version = py3_inst.language_version()
+py3 = import('python').find_installation('python3')
+py3_version = py3.language_version()
 if py3_version.version_compare('< 3.6')
   error('Invalid python version!?')
 endif
