--- a/schedulers/nbt/python/gnuradio/schedulers/nbt/bindings/meson.build
+++ b/schedulers/nbt/python/gnuradio/schedulers/nbt/bindings/meson.build
@@ -2,13 +2,13 @@ scheduler_nbt_pybind_sources = files([
 'scheduler_nbt_pybind.cc'
  ] )
 
-gnuradio_scheduler_nbt_pybind = py3_inst.extension_module('scheduler_nbt_python',
+gnuradio_scheduler_nbt_pybind = py3.extension_module('scheduler_nbt_python',
     scheduler_nbt_pybind_sources, 
     dependencies : [gnuradio_gr_dep, gnuradio_scheduler_nbt_dep, python3_dep, pybind11_dep],
     include_directories: incdir_numpy,
     link_language : 'cpp',
     install : true,
-    install_dir : join_paths(py3_inst.get_install_dir(),'gnuradio','schedulers','nbt')
+    install_dir : join_paths(py3.get_install_dir(),'gnuradio','schedulers','nbt')
 )
 
 gnuradio_runtime_pybind_dep = declare_dependency(
